Fixed spacing and added some final details

--- a/css/pricing.css
+++ b/css/pricing.css
@@ -6,10 +6,14 @@ body {
   font-style: normal;
 }
 
-.pricing header,
+.pricing header {
+  text-align: center;
+  margin: 50px 0;
+}
+
 .pricing h1,
 .pricing h3 {
-  text-align: center;
+  margin: 15px;
 }
 
 .pricing h1 {
@@ -30,15 +34,23 @@ body {
 }
 
 .pricing-options div {
-  display: inline-block;
   width: 360px;
   height: 667px;
+  display: inline-block;
   margin: 15px;
   background: #ebebf0;
   border: 1px solid #c9ccd4;
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 6px;
+}
+
+.pricing-options h1 {
+  margin: 40px;
+  font-size: 36px;
+  line-height: 48px;
+  text-align: center;
+  letter-spacing: -1px;
 }
 
 .pricing-options h4 {
@@ -50,16 +62,18 @@ body {
 .pricing-options ul {
   text-align: left;
   margin: 40px 0 0 15%;
-}
-
-.pricing-options>ul>li {
-  width: 70%;
-  font-weight: 300;
-  font-size: 20px;
+  height: 230px;
   line-height: 32px;
 }
 
+.pricing-options ul li {
+  width: 70%;
+  font-weight: 300;
+  font-size: 20px;
+}
+
 button {
+  color: #ffffff;
   margin-top: 100px;
   background: #929ecc;
   border: 1px solid #000000;
